fix(viewer2): lifted the feedback button further as it was again overlapping the pagination controls at the bottom of the panels..

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -959,7 +959,7 @@ nav.pagination {
   // GN: lift the feedback button on the new viewer
   // so it doesn't overlap the nvigation bar
   // at the bottom of a panel.
-  bottom: 4em;
+  bottom: 6em;
 }
 
 .feedback {
